# chift-python-sdk

./: CHANGELOG.md  Makefile  README.md  pyproject.toml  sample-test.py  setup.py
.github/workflows/: ci.yml
chift/: README.md  __init__.py
chift/api/: client.py  exceptions.py  mixins.py
chift/models/: __init__.py
chift/models/consumers/: consumer.py
chift/models/consumers/accounting/: __init__.py
chift/models/consumers/banking/: __init__.py
chift/models/consumers/commerce/: __init__.py
chift/models/consumers/connection/: __init__.py
chift/models/consumers/custom/: __init__.py
chift/models/consumers/data/: __init__.py
chift/models/consumers/invoicing/: __init__.py
chift/models/consumers/log/: __init__.py
chift/models/consumers/payment/: __init__.py
chift/models/consumers/pms/: __init__.py
chift/models/consumers/pos/: __init__.py
chift/models/consumers/sync/: __init__.py
chift/models/datastores/: __init__.py
chift/models/integrations/: __init__.py
chift/models/syncs/: __init__.py
chift/models/webhooks/: __init__.py
chift/openapi/: README.md  chift_formatter.py  models.py  openapi.json  openapi.py
examples/: sample.py
tests/: conftest.py  test_accounting.py  test_client.py  test_commerce.py  test_connection.py  test_custom.py  test_datastore.py  test_integration.py  test_invoicing.py  test_log.py  test_pagination.py  test_payment.py  test_paymentd.py  test_pos.py  test_sync.py  test_webhook.py
tests/fixtures/: accounting.py  client.py  datastore.py  ecommerce.py  integration.py  invoicing.py  pagination.py  payment.py  pos.py  sync.py  webhook.py
tools/: generate_accounting_module.py
