[tool.poetry]
name = "chift"
version = "0.1.96"
description = "Chift API client"
authors = ["Henry Hertoghe <henry.hertoghe@chift.eu>"]
readme = "README.md"
packages = [{include = "chift"}]

[tool.poetry.dependencies]
python = ">=3.9"
pydantic = ">=2.7.2,<3.0.0"
requests = ">=2.20"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.5"
pytest-cov = "5.0.0"
black = "25.1.0"
isort = "6.0.1"
autoflake = "2.3.1"
coverage = "6.5.0"
build = "*"
twine = "6.1.0"
datamodel-code-generator = "0.28.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"