[project]
name = "backbone-python"
version = "0.1.0"
description = "This package contains every package related to the proper functionning of Chift's backbone API."
readme = "README.md"
dynamic = ["dependencies", "requires-python"]
authors = [
    {name = "Henry Hertoghe", email = "henry.hertoghe@chift.eu"},
    {name = "Matthieu Hertoghe", email = "matthieu.hertoghe@chift.eu"},
]
maintainers = [
    {name = "Florian Gras", email = "florian.gras@chift.eu"},
    {name = "Alexis Steyvoort", email = "alexis.steyvoort@chift.eu"},
    {name = "Ihor Kedenko", email = "ihor.kedenko@chift.eu"},
    {name = "Nathan Rouvroy", email = "nathan.rouvroy@chift.eu"},
]

[project.scripts]
api = "backbone_api.app.main:run"
executioner = "backbone_executioner.executioner:main"
jobber = "backbone_jobber.jobber:main"
receiver = "backbone_local_updater.receiver:run"
publisher = "backbone_local_updater.publisher:run"

[tool.poetry]
packages = [
    { include = "backbone_api", from = "src" },
    { include = "backbone_common", from = "src" },
    { include = "backbone_exec_reporting", from = "src" },
    { include = "backbone_executioner", from = "src" },
    { include = "backbone_jobber", from = "src" },
    { include = "backbone_local_updater", from = "src" },
    { include = "backbone_reporter", from = "src" },
    { include = "nodes", from = "src" }
]
requires-poetry = "==2.1.1"
include = [
    { path = "src/backbone_common/certs/" },
    { path = "src/backbone_api/app/routers/data/" }
]

[tool.poetry.dependencies]
python = "^3.11"
croniter = "0.3.31"
google-auth = "2.29.0"
google-api-python-client = "2.128.0"
isodate = "0.6.1"
pandas = "2.2.0"
pendulum = "2.1.2"
pika = "1.2.0"
psycopg2-binary = "2.9.9"
pycryptodome = "^3.10.0"
pydantic = "^2.6.1"
pymongo = "4.7.1"
python-Levenshtein = "0.25.1"
pytz = "2020.1"
redis = "5.0.3"
requests = "2.27.1"
requests-oauthlib = "2.0.0"
selenium = "4.21.0"
SQLAlchemy = "1.4.42"
thefuzz = "0.22.1"
tldextract = "3.1.0" #  "3.4.3"
typing-extensions = "4.13.0"
unidecode = "1.3.7"
uvicorn = "0.19.0"
validators = "0.22.0"
webdriver-manager = "4.0.2"
sentry-sdk = {version = "^2.19.2", extras = ["fastapi"]}
fastapi = "^0.115.8"
beautifulsoup4 = "^4.13.3"
jsonbender = "^0.9.3"
pydantic-settings = "^2.8.1"
python-dotenv = "^1.1.0"
chift = {git = "https://github.com/chift-oneapi/chift-python-sdk.git", branch = "sdk_update_sellsy_invoice_to_accounting"}


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
supertokens-python = "0.14.9"
alembic = "1.12.0"
ruff = "^0.9.0"
pytest-json-ctrf = "^0.3.5"

[tool.poetry.group.api]
optional = true

[tool.poetry.group.api.dependencies]
backoff = "2.2.1"
boto3 = "1.23.0"
countryguess = "0.3.0"
jsonmerge = "1.8.0"
json-logic-qubit = "0.9.1"
fastapi-pagination = "0.13.0a3"
filetype = "1.2.0"
greenlet = "3.0.3"
lxml = "5.2.2"
numpy = "^1.16.6"
pgeocode = "^0.5.0"
prometheus-fastapi-instrumentator = "6.1.0"
pysftp = "0.2.9"
python-jose = "3.4.0"
pyvat = "1.3.17"
reportlab = "4.0.5"
xmltodict = "0.13.0"
phonenumbers = "^8.12.48"
tenacity = "^9.0.0"

[tool.poetry.group.executioner]
optional = true

[tool.poetry.group.executioner.dependencies]
backoff = "2.2.1"
boto3 = "1.23.0"
countryguess = "0.3.0"
db-sqlite3 = "0.0.1"
filetype = "1.2.0"
jsonmerge = "1.8.0"
json-logic-qubit = "0.9.1"
lxml = "5.2.2"
mysql-connector-python = "8.0.25"
pypdf2 = "3.0.1"
pysftp = "0.2.9"
python-magic = "0.4.18"
reportlab = "4.0.5"

[tool.poetry.group.updater]
optional = true

[tool.poetry.group.updater.dependencies]
pyyaml = "^6.0.2"
boto3 = "1.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"